Bug fixes
Fixed a bug that was causing text to get cut off in the message input.
Added a footer to the page.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,6 +150,7 @@ h1 {
 #messageDiv {
     width: 50%;
     margin: 0 auto;
+    margin-bottom: 80px;
 }
 
 #messages {
@@ -169,7 +170,7 @@ h1 {
     width: calc(100% - 76px);
     height: 26px;
     margin: 0px;
-    padding: 2px 80px 2px 6px;
+    padding: 2px 6px 2px 6px;
     background-color: #DDCECC;
     font-size: 1em;
     border: 2px solid #6D524F;
@@ -184,7 +185,6 @@ h1 {
     width: 75px;
     height: 26px;
     line-height: 18px;
-    /* text-align: left; */
     font-size: 1em;
     color: #DDCECC;
     font-weight: 600;
@@ -193,6 +193,20 @@ h1 {
     float: right;
     background-color: #6C648B;
     box-sizing: border-box;
+}
+
+footer {
+    position: fixed;
+    background-color: #6D524F;
+    color: #FFF8F7;
+    bottom: 0px;
+    width: 100%;
+    height: 20px;
+}
+
+footer p {
+    float: right;
+    margin: 0px 30px 0px 0px;
 }
 
 @media screen and (max-width: 1279px) and (min-width: 601px) {
